// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tag /> it should render a Tag danger 1`] = `
.c0 {
  display: inline-block;
  margin: 1rem;
  padding: 0.5rem 0.625rem;
  font-size: 0.8rem;
  font-weight: bold;
  text-align: center;
  white-space: nowrap;
  line-height: 1rem;
  border-radius: 0.25rem;
  color: #0c0c0e;
  background: #f6bcc2;
}

<div>
  <div
    class="c0"
  >
    this is a Tag 
    danger
     
  </div>
</div>
`;

exports[`<Tag /> it should render a Tag info 1`] = `
.c0 {
  display: inline-block;
  margin: 1rem;
  padding: 0.5rem 0.625rem;
  font-size: 0.8rem;
  font-weight: bold;
  text-align: center;
  white-space: nowrap;
  line-height: 1rem;
  border-radius: 0.25rem;
  color: #0c0c0e;
  background: #d7e8f9;
}

<div>
  <div
    class="c0"
  >
    this is a Tag 
    info
     
  </div>
</div>
`;

exports[`<Tag /> it should render a Tag primary 1`] = `
.c0 {
  display: inline-block;
  margin: 1rem;
  padding: 0.5rem 0.625rem;
  font-size: 0.8rem;
  font-weight: bold;
  text-align: center;
  white-space: nowrap;
  line-height: 1rem;
  border-radius: 0.25rem;
  color: #fff;
  background: #005994;
}

<div>
  <div
    class="c0"
  >
    this is a Tag 
    primary
     
  </div>
</div>
`;

exports[`<Tag /> it should render a Tag secondary 1`] = `
.c0 {
  display: inline-block;
  margin: 1rem;
  padding: 0.5rem 0.625rem;
  font-size: 0.8rem;
  font-weight: bold;
  text-align: center;
  white-space: nowrap;
  line-height: 1rem;
  border-radius: 0.25rem;
  color: #0c0c0e;
  background: #eaeaea;
}

<div>
  <div
    class="c0"
  >
    this is a Tag 
    secondary
     
  </div>
</div>
`;

exports[`<Tag /> it should render a Tag success 1`] = `
.c0 {
  display: inline-block;
  margin: 1rem;
  padding: 0.5rem 0.625rem;
  font-size: 0.8rem;
  font-weight: bold;
  text-align: center;
  white-space: nowrap;
  line-height: 1rem;
  border-radius: 0.25rem;
  color: #0c0c0e;
  background: #e0f2bd;
}

<div>
  <div
    class="c0"
  >
    this is a Tag 
    success
     
  </div>
</div>
`;

exports[`<Tag /> it should render a Tag warning 1`] = `
.c0 {
  display: inline-block;
  margin: 1rem;
  padding: 0.5rem 0.625rem;
  font-size: 0.8rem;
  font-weight: bold;
  text-align: center;
  white-space: nowrap;
  line-height: 1rem;
  border-radius: 0.25rem;
  color: #0c0c0e;
  background: #fee5ad;
}

<div>
  <div
    class="c0"
  >
    this is a Tag 
    warning
     
  </div>
</div>
`;

exports[`<Tag /> should render 1`] = `
.c0 {
  display: inline-block;
  margin: 1rem;
  padding: 0.5rem 0.625rem;
  font-size: 0.8rem;
  font-weight: bold;
  text-align: center;
  white-space: nowrap;
  line-height: 1rem;
  border-radius: 0.25rem;
  color: #434956;
  background: #ebeff3;
}

<div>
  <div
    class="c0"
  >
    this is an alert 
  </div>
</div>
`;
